fix : vaccination 등록 분리